--- a/app/views/contacts/_merge.html.haml
+++ b/app/views/contacts/_merge.html.haml
@@ -51,6 +51,8 @@
         %li(style="list-style: disc inside") (<strong>#{duplicate.emails.size}</strong>) emails
         %li(style="list-style: disc inside") (<strong>#{duplicate.comments.size}</strong>) comments
         %li(style="list-style: disc inside") (<strong>#{duplicate.addresses.size}</strong>) addresses
+        %li(style="list-style: disc inside") (<strong>#{duplicate.contact_groups.size}</strong>) contact groups
+        %li(style="list-style: disc inside") (<strong>#{duplicate.attendances.size}</strong>) event attendances
 
     .buttonbar
       = f.submit t(:merge_assets, :assets => t(:contacts)), :onclick => "var check=confirm('#{t('confirm_assets_merge', :assets => t(:contacts))}'); if(!check){return false;};"
