--- a/app/views/shared/_merge_custom_fields.html.haml
+++ b/app/views/shared/_merge_custom_fields.html.haml
@@ -13,19 +13,32 @@
         %table{ :cellpadding => "3px", :style => "text-align:left; border-collapse: collapse; border: none;" }
           %tr
             %th
-            %th{ :valign => :top, :style => "font-size: 13px;", :width => "40%" }
+            %th{ :valign => :top, :style => "font-size: 13px;", :width => "27%" }
               = "#{t(:duplicate_asset, :asset => t(:contact))}: #{duplicate.name}"
-            %th{ :valign => :top, :style => "font-size: 13px;", :width => "40%" }
+            %th{ :valign => :top, :style => "font-size: 13px;", :width => "27%" }
               = "#{t(:master_asset, :asset => t(:contact))}: #{master.name}"
             - duplicate_attributes.keys.each do |attribute|
               - duplicate_value, master_value = duplicate_attributes[attribute], master_attributes[attribute]
               - unless duplicate_value.blank? and master_value.blank?
+                - if attribute == "cf_weekly_emails" || attribute == "cf_supporter_emails"
+                  %th{ :valign => :top, :style => "font-size: 13px;", :width => "27%" }
+                    result
                 %tr{ :style => "border-bottom:1px dotted silver;" }
                   %th{ :width => "20%" }
                     .label #{attribute.humanize}
-                  %td
-                    = ignore_merge_radio_button("no",  attribute, default_merge[attribute]) unless duplicate_value.blank?
-                    .label{:style => "display: inline;"} #{duplicate_value}
-                  %td
-                    = ignore_merge_radio_button("yes", attribute, default_merge[attribute]) unless master_value.blank?
-                    .label{:style => "display: inline;"} #{master_value}
+                  - if attribute == "cf_weekly_emails" || attribute == "cf_supporter_emails"
+                    %td
+                      -#= ignore_merge_radio_button("no",  attribute, default_merge[attribute]) unless duplicate_value.blank?
+                      .label{:style => "display: inline;"} #{duplicate_value}
+                    %td
+                      -#= ignore_merge_radio_button("yes", attribute, default_merge[attribute]) unless master_value.blank?
+                      .label{:style => "display: inline;"} #{master_value}
+                    %td
+                      .label{:style => "display: inline;"} #{duplicate_value + " + " + master_value}
+                  - else
+                    %td
+                      = ignore_merge_radio_button("no",  attribute, default_merge[attribute]) unless duplicate_value.blank?
+                      .label{:style => "display: inline;"} #{duplicate_value}
+                    %td
+                      = ignore_merge_radio_button("yes", attribute, default_merge[attribute]) unless master_value.blank?
+                      .label{:style => "display: inline;"} #{master_value}
